--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     implementation("com.squareup.okhttp3:okhttp:4.8.1")
     implementation("com.squareup.okio:okio:1.8.0")
+    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
 }
