--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     implementation files('libs/XmDownload_2.0.jar')
     implementation files('libs/XmlyOAuth2SDK_V2.0.jar')
     compile 'com.google.code.gson:gson:2.8.2'
-    implementation("com.squareup.okhttp3:okhttp:4.8.1")
-    implementation("com.squareup.okio:okio:1.8.0")
+    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
+    implementation 'com.squareup.okio:okio:1.8.0'
     implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
