set RecycclerView data;click item intent to playActivity;come true playActivity UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailActivity"></activity>
+
+        <activity android:name=".PlayerActivity"></activity>
     </application>
 
 </manifest>
