--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <!--target >=28 需要设置此权限 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ximalay_logo"
@@ -33,6 +35,9 @@
         <activity android:name=".DetailActivity"></activity>
 
         <activity android:name=".PlayerActivity"></activity>
+
+        <service android:name="com.ximalaya.ting.android.opensdk.player.service.XmPlayerService"
+        android:process=":player"/>
     </application>
 
 </manifest>
