--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,16 +25,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".base.BaseApplication">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".DetailActivity" android:screenOrientation="portrait"></activity>
 
-        <activity android:name=".PlayerActivity"></activity>
+        <activity android:name=".PlayerActivity" android:screenOrientation="portrait"></activity>
 
         <service android:name="com.ximalaya.ting.android.opensdk.player.service.XmPlayerService"
         android:process=":player"/>
