search feature: create interface and callback and draw searchActivity UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
 
         <activity android:name=".PlayerActivity" android:screenOrientation="portrait"></activity>
 
+        <activity android:name=".SearchActivity" android:screenOrientation="portrait"></activity>
+
         <service android:name="com.ximalaya.ting.android.opensdk.player.service.XmPlayerService"
         android:process=":player"/>
     </application>
