add DatabaseDao and subPresenter and databaseCallback UICallback

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
+    implementation "io.reactivex.rxjava3:rxjava:3.0.7"
 }
